--- a/content/themes/dude/sass/layout/_navigation.scss
+++ b/content/themes/dude/sass/layout/_navigation.scss
@@ -35,7 +35,7 @@ body {
           box-shadow: none;
           text-decoration: none;
           background: none;
-          z-index: 9999999999;
+          z-index: 90;
           position: absolute;
           top: 15px;
           left: 10px;
@@ -88,7 +88,7 @@ a {
       font-weight: 700;
       text-transform: uppercase;
       transition: all .5s;
-      z-index: 100000000;
+      z-index: 90;
 
       &:hover,
       &:active,
@@ -224,7 +224,7 @@ a {
     transform: translate3d(0, -100%, 0);
     margin: 0;
     padding: 0;
-    z-index: 9999999;
+    z-index: 50;
 
     &.open {
       visibility: visible;
