--- a/content/themes/dude/sass/layout/_site-footer.scss
+++ b/content/themes/dude/sass/layout/_site-footer.scss
@@ -425,7 +425,7 @@ body {
   width: 165px;
   padding: 10px 15px 8px;
   line-height: 1.5;
-  z-index: 9999999;
+  z-index: 100;
   box-shadow: 0 0 40px rgba(85, 85, 85, .2);
   transition: all .55s;
   opacity: 1;
