--- a/content/themes/dude/sass/layout/_site-header.scss
+++ b/content/themes/dude/sass/layout/_site-header.scss
@@ -6,7 +6,7 @@ body {
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 999;
+      z-index: 50;
       overflow: hidden;
       white-space: nowrap;
 
@@ -136,7 +136,7 @@ body {
       .site-branding {
         overflow: hidden;
         position: relative;
-        z-index: 99999999999;
+        z-index: 80;
 
         @media(min-width: $responsivenav) {
           @include column(2/8);
