--- a/content/themes/dude/sass/views/_reference.scss
+++ b/content/themes/dude/sass/views/_reference.scss
@@ -443,7 +443,7 @@ body {
               height: 60px;
               font-size: 120px;
               line-height: 1;
-              z-index: 999;
+              z-index: 50;
               font-family: $font-headings;
               opacity: .5;
 
