--- a/content/themes/dude/sass/views/_services.scss
+++ b/content/themes/dude/sass/views/_services.scss
@@ -164,7 +164,7 @@ body {
                   height: 60px;
                   font-size: 120px;
                   line-height: 1;
-                  z-index: 999;
+                  z-index: 50;
                   font-family: $font-headings;
                   color: #fff;
                   opacity: .5;
